--- a/tdd-samples/pom.xml
+++ b/tdd-samples/pom.xml
@@ -21,5 +21,64 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>org.mockito</groupId>
+    	<artifactId>mockito-all</artifactId>
+    	<version>1.9.5</version>
+    	<scope>test</scope>
+    </dependency>
+    <dependency>
+    	<groupId>org.easytesting</groupId>
+    	<artifactId>fest-assert</artifactId>
+    	<version>1.4</version>
+    	<scope>test</scope>
+    </dependency>
+    <dependency>
+    	<groupId>pl.pragmatists</groupId>
+    	<artifactId>JUnitParams</artifactId>
+    	<version>1.1.0</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.easetech</groupId>
+    	<artifactId>easytest</artifactId>
+    	<version>0.6.3</version>
+    </dependency>
+    <dependency>
+    	<groupId>cobertura</groupId>
+    	<artifactId>cobertura</artifactId>
+    	<version>1.9rc1</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.powermock</groupId>
+    	<artifactId>powermock</artifactId>
+    	<version>1.6.6</version>
+    	<type>pom</type>
+    </dependency>
+    <dependency>
+    	<groupId>easymock</groupId>
+    	<artifactId>easymock</artifactId>
+    	<version>2.0</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.pitest</groupId>
+    	<artifactId>pitest</artifactId>
+    	<version>1.2.2</version>
+    </dependency>
+    <dependency>
+    	<groupId>com.googlecode.catch-exception</groupId>
+    	<artifactId>catch-exception</artifactId>
+    	<version>1.2.0</version>
+    </dependency>
+    <dependency>
+    	<groupId>com.google.code.tempus-fugit</groupId>
+    	<artifactId>tempus-fugit</artifactId>
+    	<version>1.1</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.unitils</groupId>
+    	<artifactId>unitils</artifactId>
+    	<version>3.4.6</version>
+    	<type>pom</type>
+    </dependency>
   </dependencies>
 </project>
