--- a/tdd-samples/pom.xml
+++ b/tdd-samples/pom.xml
@@ -15,6 +15,12 @@
   </properties>
 
   <dependencies>
+      <dependency>
+          <groupId>org.hamcrest</groupId>
+          <artifactId>hamcrest-all</artifactId>
+          <version>1.3</version>
+          <scope>test</scope>
+      </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
